--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
     <script nomodule src="/build/demo-pro.js"></script>
   </head>
   <body>
+    <login-page/>
     <!-- <gallery-grid/> -->
-    <demo-adesa/>
+    <!-- <demo-adesa/> -->
       <!-- <my-component first="dilli" middle="dilli" last="'Don't call me a framework' JS"></my-component> -->
   </body>
 </html>
